<resources>
    <string name="app_name">Scholarplus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_view_logo_image">Logo Image</string>

    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_username">Full name</string>
    <string name="hint_enter_password">Password</string>
    <string name="hint_enter_institut">University/school</string>
    <string name="hint_enter_faculty">Faculty</string>
    <string name="hint_enter_department">Department</string>
    <string name="hint_enter_semester">Semester</string>
    <string name="hint_enter_ipk">IPK</string>
    <string name="hint_enter_city">City</string>
    <string name="hint_enter_dob">Date of birth</string>
    <string name="hint_enter_province">Province</string>

    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">Sign in with Google</string>

    <string name="error_password_not_matches">Sorry password you entered does not match</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_edit_profile">Save</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating scholarplus…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>

    <string name="prologue_editprofile">Let\'s get started. Ceritakan tentang diri anda lewat form scholarplus. Data akan tersimpan dengan aman.</string>
    <string name="tanpa_manipulasi">Dengan ini saya menyatakan bahwa data yang telah saya isikan adalah benar tanpa manipulasi apapun.</string>
    <string name="nama_lengkapveri">Nama sebenarnya adalah nama yang lengkap legal dan merupakan nama lengkap yang digunakan formal.</string>
    <string name="upload_cv_benar">Upload cv anda (2MB MAX), dengan ini saya menyatakan bahwa segala data yang ada di dalam cv adalah benar.</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>

    <string name="pref_title_password">Signal strength</string>
    <string name="pref_default_password">Excellent</string>
    <string name="pref_sum_password">SSID</string>
    <string name="pref_require_password">Material Dialogs</string>
    <string name="pref_description_require_password">Security</string>
    <string name="title_activity_settings">App Setting</string>


</resources>

