<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        tools:context=".ui.login.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_image_size"
                android:layout_height="@dimen/logo_image_size"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="16dp"
                android:paddingLeft="15dp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="13dp"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="Scholarplus"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:textSize="12sp"
                    android:text="Your best scholar partner, ever"
                    android:textColor="@color/base"/>


        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            >

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/white"
                android:hint="@string/hint_enter_email"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            >

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/white"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button

            android:id="@+id/login_with_google"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_text_light"
            android:text="@string/button_signin_with_google"
            android:textAllCaps="false"
            android:layout_gravity="left|center_vertical"
            android:textAlignment="gravity" />


        <LinearLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/login_with_password"
            style="@style/Button.login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/shape4"
            android:textColor="@color/white"
            android:onClick="onSignInPressed"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/button_sign_in" />

            <Button
                android:id="@+id/tv_sign_up"
                style="@style/Button.login"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape3"
                android:layout_height="38dp"
                android:onClick="onSignUpPressed"
                android:text="@string/button_create_account" />


        </LinearLayout>


    </LinearLayout>


    </LinearLayout>

</ScrollView>